Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntegerText.quorum
class Main
    action Main
        integer int
        int = cast(integer, "5")
        if int = 5
            output "passed"
        end
    end
end