Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanIntegerWrapped.quorum
class main
    action Main
        integer i = 5
        boolean b = i
    end
end